# Colony

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: aur-publish.yml  ci.yml  colony-rust-release.yml.template  release-please.yml
config/: categories.json  colony.toml
docs/: architecture.md  colony-spec.md  docs.md  faq.md  release-signing.md  tutorial.md
scripts/: sign-release.sh
src/: config.rs  download.rs  github.rs  i18n.rs  icons.rs  main.rs  message.rs  oauth.rs  persistence.rs  scan.rs  sections.rs  signing.rs  state.rs  update.rs
src/ui/: app_grid.rs  detail.rs  github_panel.rs  markdown_blocks.rs  mod.rs  settings.rs  sidebar.rs  theme.rs  tutorial.rs
src/ui/assets/fonts/JetBrainsMonoNerdFont/: README.md
