[package]
name = "colony"
version = "0.4.1"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
iced = { version = "0.14.0", features = ["tokio", "markdown", "advanced"] }
shell-words = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "charset", "system-proxy"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
futures = "0.3"
open = "5"
base64 = "0.22"
dirs = "6"
keyring = { version = "3", features = ["sync-secret-service", "vendored"] }
semver = "1"
sha2 = "0.10"
# Pure-Rust ed25519 verification for signed launcher self-updates (no openssl).
ed25519-dalek = { version = "3", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.fast]
inherits = "release"
debug = "line-tables-only"
incremental = true
lto = false
codegen-units = 16
strip = false
